--- a/cl-pp/src/app/app.component.html
+++ b/cl-pp/src/app/app.component.html
@@ -48,6 +48,11 @@
                   <td>{{item.timestamp}}</td>
                 </tr>
               </tbody>
+               <tfoot>
+                <tr>
+                  <td colspan="6">TOTAL TIME CALCULATED IN ALARM DURATION: <b>{{calTimestamp}}</b> seconds.</td>
+                </tr>
+              </tfoot>
             </table>
         </div>
         <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
